--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,15 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#996ed9",
+        "activityBar.background": "#15e7a3",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#e5b89a",
+        "activityBarBadge.background": "#bb50ef",
         "activityBarBadge.foreground": "#15202b",
-        "titleBar.activeBackground": "#7c46cf",
-        "titleBar.inactiveBackground": "#7c46cf99",
+        "titleBar.activeBackground": "#11b882",
+        "titleBar.inactiveBackground": "#11b88299",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveForeground": "#e7e7e799",
-        "tab.activeBorder": "#996ed9"
+        "tab.activeBorder": "#15e7a3"
     },
-    "peacock.color": "#7c46cf"
+    "peacock.color": "#11b882"
 }
